fix(catalog): resolve 6 critical and 12 warning review findings
Critical fixes:
- Kafka events now published after transaction commit (dual-write safe)
- Kafka send failures logged and counted (no longer fire-and-forget)
- Division by zero in getAvgStars guarded for empty comments
- CSRF explicitly disabled for stateless API
- @Transactional removed from repository interfaces (service-layer only)
- findAllByProductName filters soft-deleted rows via native query

Warning fixes:
- JPQL update/changeCategory include @Version in WHERE (optimistic lock)
- Kafka producer: acks=all, idempotence enabled, observation for tracing
- Actuator permitAll narrowed to health/info/prometheus
- CascadeType.ALL removed from @ManyToOne (Product->Category, Comment->Product)
- Product->Comments cascade narrowed to PERSIST+MERGE
- RoutingDataSourceConfig health probe race fixed with ReentrantLock
- CategoryServiceImpl: getById replaced with getReferenceById
- logback-spring.xml: JSON encoder for prod profile, plain text for dev
- RedisCacheConfig: documented @class type coupling
- Log moved after saveAndFlush; Collectors.toList() -> .toList()

Tests: 106 pass (3 new), all JaCoCo coverage checks met.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>